  * Change recommends from perl5 to perl (Closes: #864310)
  * Run wrap-and-sort on debian/control and clean-up trailing
    whitespace in changelog and rules (Lintian warnings)
  * Add missing patch description (Lintian warning)
  * Bump Standards-Version to 4.1.4 (no changes needed)
  * Update various URLs to use https instead of http
  * Update Vcs-* fields to new location at salsa.debian.org

 -- Tormod Volden <debian.tormod@gmail.com>  Sun, 23 Jul 2017 19:15:54 +0200

xscreensaver (5.36-1) unstable; urgency=medium

  * New upstream release 5.36, changes since 5.34:
    - New hacks (modes): `dymaxionmap', `unicrud', `energystream',
      `raverhoop', `hydrostat', `discoball', `cubetwist', `cubestack',
      `splodesic' and `hexstrut'.
    - Ignore WM_USER_TIME property changes with days-old timestamps.
    - Added Windows 10 to `bsod'.
    - `pong' is now playable.
    - Several new programs in `m6502'.
    - `rotzoomer -mode circle'.
    - Better titles in `photopile'.
  * Replace dependencies on libjpeg-progs with libjpeg-turbo-progs
    (Closes: #813395)
  * debian/patches/12_upstream_hurd-no-pthread_stack_min.patch:
    Do not check for PTHREAD_STACK_MIN on GNU/Hurd (Closes: #823049)
  * debian/control: Updated, secure Vcs-Git and Vcs-Browser URI
  * Bump Standards-Version to 3.9.8 (no changes needed)
  * Bump debhelper compatibility version to 9
  * debian/patches/20_hacks_maze_xpm_libs.patch: Deleted (obsolete)
  * Add patch descriptions (and some bug references) to all patches
  * debian/rules: Enable all hardening options
  * debian/control: Remove Enhances (reverse dependencies) and obsolete
    Breaks, Replaces and versioned dependencies (Closes: #822621)
  * Ship /usr/lib/systemd/user/xscreensaver.service (Closes: #843610)
  * debian/patches/75_Makefile_in-ignore-alien-platforms.patch:
    Do not descend into OSX and android folders in make clean

 -- Tormod Volden <debian.tormod@gmail.com>  Sun, 11 Dec 2016 15:18:05 +0100
